# heltes_db

./: .gitignore  CLAUDE.md  Cargo.toml  HeltesDB.cfg  HeltesDB.tla  README.md  TODO.md  bench_baseline.json  build.rs
.claude/commands/: brainstormer.md  pe-reviewer.md  slopper.md
.github/workflows/: ci.yml
bench/baselines/: 3coord-5shard-hot-key.json  3coord-5shard-multi-shard.json  3coord-5shard-uniform-write.json  profile-hot-key.json  profile-multi-shard.json  profile-uniform-write.json
benches/: shard_hot_paths.rs
benchmarking/: .gitignore  go.mod  go.sum  main.go  results_1.txt  results_2.txt
proto/: heltes_db.proto
spec/: HeltesDB.cfg  HeltesDB.tla  HeltesDB_multi.cfg  MC.tla  MC_multi.tla
src/: bench.rs  lib.rs  shard.rs
src/coordinator/: mod.rs  routing.rs  server.rs  tests.rs
src/shard/: mod.rs  server.rs  tests.rs
tests/: bench_test.rs  integration_test.rs  shard_bench_traces.rs
