[package]
name = "heltes_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "heltes_db"
path = "src/lib.rs"

[[bin]]
name = "shard"
path = "src/bin/shard.rs"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "cluster"
path = "src/bin/cluster.rs"

[dependencies]
futures = "0.3"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
