[package]
name = "heltes_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "heltes_db"
path = "src/lib.rs"

[[bin]]
name = "shard"
path = "src/bin/shard.rs"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "cluster"
path = "src/bin/cluster.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
futures = "0.3"
parking_lot = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "signal"] }
tonic = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "shard_hot_paths"
harness = false

[build-dependencies]
tonic-build = "0.12"
